# gridsynapse-mvp

./: .dockerignore  .env.example  .gitignore  CNAME  Makefile  README.md  demo.py  docker-compose.v2.yml  docker-compose.yml  gridsynapse-docker.txt  gridsynapse-mobile.html  gridsynapse-quickstart.sh  gridsynapse-updated-dashboard.html  pyproject.toml  quickstart.sh  validation.py  vercel.json
.github/workflows/: ci-cd.yml  v2-ci.yml
agents/: agent_prompts.py  requirements.txt
api/: index.py  main.py  requirements.txt
apps/web/: .env.example  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/components/: OperatorConsole.tsx
apps/web/lib/: api.ts  format.ts  types.ts
deploy/: index.html
docs/v2/: ARCHITECTURE.md  DELIVERY_PLAN.md  PRD.md  PROVIDER_ACTIVATION.md  README.md  RESEARCH_AND_REPO_AUDIT.md  SIMULATION_AND_EVIDENCE.md
evidence/: README.md  reference-profile-results.json
infra/: dashboard-v2.html  mobile-dashboard.html
infra/docker/: Dockerfile.api.v2  Dockerfile.web.v2
infra/prometheus/: prometheus.yml
scripts/: generate_reference_evidence.py  run_benchmark.py
solver/: Dockerfile  optimizer.py  requirements.txt
supabase/migrations/: 202607180001_gridsynapse_persistence.sql  202607180002_gridsynapse_backend_api_key.sql  20260721022133_gridsynapse_procurement_persistence.sql
tests/mocks/: Dockerfile.watttime  mock_watttime.py
tests/v2/: conftest.py  test_contracts.py  test_live_market.py  test_optimizer.py  test_procurement.py  test_scenario_store.py
(+13 files in other folders)
